kubernetes/server/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: recipe-manager-api
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: 5000
      protocol: TCP
  selector:
    app: recipe-manager
